Fixed copy, added share btn
Fixed copyToClipboard on iOS, and added share button for facebook

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -152,9 +152,10 @@ a
 	@include textDecoration
 	margin-top: 10px
 
-.share
-	text-align: right
-	width: 100%
+.footer
+	text-align: left
+	width: 500px
+	padding: 1rem
 
 .lvl__container
 	display: flex
