--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   background-color: #fcd654;
 }
 
-.container, .footer {
+.container {
   padding: 1rem;
   display: flex;
   align-items: flex-end;
@@ -173,9 +173,10 @@ a {
   margin-top: 10px;
 }
 
-.share {
-  text-align: right;
-  width: 100%;
+.footer {
+  text-align: left;
+  width: 500px;
+  padding: 1rem;
 }
 
 .lvl__container {
