--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ input[type=range]::-webkit-slider-thumb {
   color: transparent;
   height: 30px;
   width: 25px;
+  background: transparent;
   background-image: url("http://tiny.cc/o61saz");
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -131,11 +132,13 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 input[type=range]::-moz-range-thumb {
-  height: 30px;
-  width: 25px;
+  height: 45px;
+  width: 30px;
+  background: transparent;
   background-image: url("http://tiny.cc/o61saz");
-  background-size: 100% 100%;
+  background-size: 25px 30px;
   background-repeat: no-repeat;
+  border: none;
   cursor: pointer;
 }
 
@@ -145,6 +148,7 @@ input[type=range]::-ms-thumb {
   background-image: url("http://tiny.cc/o61saz");
   background-size: 100% 100%;
   background-repeat: no-repeat;
+  background: transparent;
   cursor: pointer;
 }
 
@@ -209,4 +213,8 @@ a {
   .description {
     font-size: 1rem;
   }
+}
+
+*:focus {
+  outline: 2px solid blue;
 }
