--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body {
   background-color: #ff9618;
   color: #fff;
   border-radius: 5px;
-  max-height: 32px;
+  height: 32px;
   padding: 0.5rem 1rem;
   text-transform: uppercase;
   border: none;
@@ -124,7 +124,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 30px;
   width: 25px;
   background: transparent;
-  background-image: url("http://tiny.cc/o61saz");
+  background-image: url("../img/flame.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   cursor: pointer;
@@ -135,7 +135,7 @@ input[type=range]::-moz-range-thumb {
   height: 45px;
   width: 30px;
   background: transparent;
-  background-image: url("http://tiny.cc/o61saz");
+  background-image: url("../img/flame.png");
   background-size: 25px 30px;
   background-repeat: no-repeat;
   border: none;
@@ -145,7 +145,7 @@ input[type=range]::-moz-range-thumb {
 input[type=range]::-ms-thumb {
   height: 30px;
   width: 25px;
-  background-image: url("http://tiny.cc/o61saz");
+  background-image: url("../img/flame.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background: transparent;
@@ -213,8 +213,4 @@ a {
   .description {
     font-size: 1rem;
   }
-}
-
-*:focus {
-  outline: 2px solid blue;
 }
