--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,26 @@ a {
   margin-top: 10px;
 }
 
+.share__container {
+  margin-bottom: 2rem;
+}
+
+.made__with__love__container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cheers {
+  font-size: 12px;
+  color: #000;
+  background-color: #ffe89b;
+  font-weight: bold;
+  text-decoration: underline;
+  text-shadow: 0.5px 0.5px 1px #ff9618;
+  padding: 5px 10px;
+  display: inline-block;
+}
 @media(max-width: 480px) {
   .description {
     font-size: 1.38rem;
