--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,4 @@
-@font-face {
-  font-family: Roboto;
-  src: url(https://fonts.googleapis.com/css?family=Roboto) format('woff');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 * {
   box-sizing: border-box;
