--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,17 @@ a {
   display: inline-block;
 }
 
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
 @keyframes wiggle{
   90% {
     transform: rotate(0deg);
