fixed font-size for close button

--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,8 @@ a {
   border: none;
   cursor: pointer;
   text-decoration: none;
+  font-size: 14px;
+  border-color: transparent;
 }
 .info_arrow {
   position: relative;
