--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,14 @@ body {
   background-color: #fcd654;
 }
 
-.container {
+.container, .translations__container {
   padding: 1rem;
   display: flex;
   align-items: flex-end;
   justify-content: center;
   flex-direction: column;
   max-width: 500px;
+  width: 100%;
   position: relative;
 }
 
@@ -75,8 +76,11 @@ body {
 .diff_lvl {
   margin: 1rem 0 1rem auto;
 }
-
-.lvl {
+.translations__container {
+  align-items: center;
+  padding: calc(1rem - 5px);
+}
+.lvl, .translations__header {
   width: auto;
   color: #000;
   background-color: #ffe89b;
@@ -85,6 +89,28 @@ body {
   text-shadow: 0.5px 0.5px 1px #ff9618;
   padding: 5px 10px;
   display: inline-block;
+}
+
+.funniest__translations {
+  display: flex;
+  align-content: flex-start;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+}
+
+.image__container {
+  height: 80px;
+  width: 33%;
+  object-fit: cover;
+  padding: 5px;
+  overflow: hidden;
+}
+
+.image__container img {
+  height: 100%;
+  width: 100%;
 }
 
 .btn {
@@ -269,6 +295,7 @@ a {
 
 .share__container {
   margin-bottom: 3rem;
+  margin-top: 2rem;
 }
 
 .made__with__love__container {
