--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
   text-shadow: 0.5px 0.5px 1px #ff9618;
   padding: 5px 10px;
   display: inline-block;
-  margin: 2rem 0 1rem 0;
+  margin: 0 0 1rem 0;
   text-align: center;
   width: 100%;
   font-size: 1.6rem;
@@ -242,6 +242,7 @@ a {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  display: none;
 }
 
 .hidden {
@@ -256,7 +257,7 @@ a {
   font-weight: bold;
   text-shadow: 0.5px 0.5px 1px #ff9618;
   padding: 5px 10px;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-between;
   margin: 0 1rem;
